# model-viewer

./: CMakeLists.txt  main.cpp
include/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_tables.cpp
libs/: assimp-vc142-mtd.lib  glfw3.lib  imgui.lib
